[project]
name = "py-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.0",
    "langchain-postgres>=0.0.16",
    "langchain-tavily>=0.1.0",
    "langgraph>=1.0.0",
    "mypy>=1.18.2",
    "openai>=2.5.0",
    "pypdf>=6.4.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

